Fix build issue

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-// Plus imports for other components in your app.
+// Plus imports for other components in your app.y
 
 // Include the base styles for Angular Material core. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -44,7 +44,6 @@ md-nav-list {
     $white-orange: mat-light-theme($primary2, $accent2, $warn2);
 
     @include angular-material-theme($white-orange);
-    @include covalent-theme($white-orange);
 }
 .dark-grey-blue {
     $primary3: mat-palette($mat-blue-grey, 800);
@@ -54,7 +53,6 @@ md-nav-list {
     $dark-grey-blue: mat-dark-theme($primary3, $accent3, $warn3);
 
     @include angular-material-theme($dark-grey-blue);
-    @include covalent-theme($dark-grey-blue);
 }
 .light-blue-red {
     $primary4: mat-palette($mat-light-blue, 700);
@@ -64,7 +62,6 @@ md-nav-list {
     $light-blue-red: mat-light-theme($primary4, $accent4, $warn4);
 
     @include angular-material-theme($light-blue-red);
-    @include covalent-theme($light-blue-red);
 }
 
 /* ------------------------------------------------------------------------------- */
